# mc-server

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml
src/: config.rs  main.rs
src/game/: block.rs  blocks.rs  chunks.rs  item.rs  mod.rs  on_tick.rs  world.rs
src/game/entities/: player.rs
src/game/entity/: mod.rs  player.rs
src/protocol/: chat.rs  listener.rs  mod.rs  packet.rs  player_cons.rs  tab_list.rs
src/protocol/handlers/: chat_handler.rs  cia_handler.rs  handshake_handler.rs  hc_handler.rs  keep_alive_handler.rs  login_handler.rs  mod.rs  pbp_handler.rs  pdig_handler.rs  ping_handler.rs  pmove_handler.rs
src/protocol/utils/: chunk_ops.rs  kick.rs  mod.rs  read_packet.rs  send_chunk.rs  write_packet.rs
