[package]
name = "mc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
ucs2 = "0.3.2"
deflate = "1.0.0"
lazy_static = "1.4.0"
toml = "0.7.4"
serde = { version = "1.0.163", features = ["derive"] }
lazy_mut = "0.1.0"
